Fix alignment in investor distribution chart

--- a/src/scss/_global.scss
+++ b/src/scss/_global.scss
@@ -848,6 +848,7 @@ $mobile_bp: 650px;
     }
 
     .d-tablet-block {
+        margin-top: 40px;
         display: block;
     }
 }
